VSE - Audio Caching Bug #66431

Closed
opened 2019-07-04 15:44:34 +02:00 by Almaz Mannanov · 7 comments

System Information
Operating system: Linux Mint 18.3 Cinnamon 64-bit
Graphics card: GeForce GTX 1060 Mobile

Blender Version
Broken: 2.80.74, cc667854a9, 2019-07-03
Worked: 2.80.61, b1af682001, 2019-05-10

Short description of error
Blender closes when you select audio caching checkbox.

Exact steps for others to reproduce the error
Open Blender.
Go to VSE.
Load mp3 audio.
Select Caching checkbox (Sidebar > Strip > Source).
Blender crash.

Example file: bug-1.blend

**System Information** Operating system: Linux Mint 18.3 Cinnamon 64-bit Graphics card: GeForce GTX 1060 Mobile **Blender Version** Broken: 2.80.74, cc667854a94d, 2019-07-03 Worked: 2.80.61, b1af68200159, 2019-05-10 **Short description of error** Blender closes when you select audio caching checkbox. **Exact steps for others to reproduce the error** Open Blender. Go to VSE. Load mp3 audio. Select Caching checkbox (Sidebar > Strip > Source). Blender crash. Example file: [bug-1.blend](https://archive.blender.org/developer/F7566365/bug-1.blend)
Author

Added subscriber: @Almaz

Added subscriber: @Almaz

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Richard Antalik was assigned by Sebastian Parborg 2019-07-04 16:01:40 +02:00

I'm getting some asserts:

BLI_assert failed: /home/zed/prog/blender/source/blender/blenkernel/intern/sound.c:89, sound_verify_evaluated_id(), at 'id->tag & (LIB_TAG_COPIED_ON_WRITE | LIB_TAG_COPIED_ON_WRITE_EVAL_RESULT | LIB_TAG_NO_MAIN)'
blender: /home/zed/prog/blender/extern/audaspace/bindings/C/AUD_Sound.cpp:257: AUD_Sound* AUD_Sound_cache(AUD_Sound*): Assertion `sound' failed.

If I ignore that I get this crash:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x000055555cbaa136 in std::__shared_ptr<aud::ISound, (__gnu_cxx::_Lock_policy)2>::__shared_ptr (this=0x7fffffffd5c0)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1165
1165	      __shared_ptr(const __shared_ptr&) noexcept = default;
(gdb) bt
#0  0x000055555cbaa136 in std::__shared_ptr<aud::ISound, (__gnu_cxx::_Lock_policy)2>::__shared_ptr (this=0x7fffffffd5c0)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1165
#1  0x000055555cbaa181 in std::shared_ptr<aud::ISound>::shared_ptr (this=0x7fffffffd5c0)
    at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr.h:129
- 2  0x000055555cbfa231 in AUD_Sound_cache (sound=0x0) at /home/zed/prog/blender/extern/audaspace/bindings/C/AUD_Sound.cpp:261
- 3  0x0000555557db5015 in BKE_sound_cache (sound=0x7fffd25f4208) at /home/zed/prog/blender/source/blender/blenkernel/intern/sound.c:397
- 4  0x00005555581b8aed in rna_Sound_caching_set (ptr=0x7fffd276df60, value=true) at /home/zed/prog/blender/source/blender/makesrna/intern/rna_sound.c:53
- 5  0x00005555581b8d42 in Sound_use_memory_cache_set (ptr=0x7fffd276df60, value=true)
    at /home/zed/prog/blender/build/source/blender/makesrna/intern/rna_sound_gen.c:125
#6  0x000055555801f41a in RNA_property_boolean_set (ptr=0x7fffd276df60, prop=0x55555e1a4b80 <rna_Sound_use_memory_cache>, value=true)
    at /home/zed/prog/blender/source/blender/makesrna/intern/rna_access.c:2507
- 7  0x00005555588321d9 in ui_but_value_set (but=0x7fffd276dc08, value=1) at /home/zed/prog/blender/source/blender/editors/interface/interface.c:2179
- 8  0x000055555884a03f in ui_apply_but_TOG (C=0x7fffeb891208, but=0x7fffd276dc08, data=0x7fffe6796908)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:910
#9  0x000055555884cf84 in ui_apply_but (C=0x7fffeb891208, block=0x7fffd22a5d08, but=0x7fffd276dc08, data=0x7fffe6796908, interactive=true)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:2004
#10 0x0000555558851a75 in ui_do_but_ANY_drag_toggle (C=0x7fffeb891208, but=0x7fffd276dc08, data=0x7fffe6796908, event=0x7fffdc327108,
    r_retval=0x7fffffffd848) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:3909
#11 0x000055555885284f in ui_do_but_TOG (C=0x7fffeb891208, but=0x7fffd276dc08, data=0x7fffe6796908, event=0x7fffdc327108)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:4208
#12 0x000055555885aa9c in ui_do_button (C=0x7fffeb891208, block=0x7fffd22a5d08, but=0x7fffd276dc08, event=0x7fffdc327108)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:7000
#13 0x000055555885d58f in ui_handle_button_event (C=0x7fffeb891208, event=0x7fffdc327108, but=0x7fffd276dc08)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:8163
#14 0x0000555558861d2a in ui_region_handler (C=0x7fffeb891208, event=0x7fffdc327108, UNUSED_userdata=0x0)
    at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10036
#15 0x0000555558226d9a in wm_handler_ui_call (C=0x7fffeb891208, handler=0x7fffd0d6ac28, event=0x7fffdc327108, always_pass=0)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:623
#16 0x000055555822c0a7 in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffdc327108, handlers=0x7fffd0e9f510)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2699
#17 0x000055555822ce7c in wm_handlers_do (C=0x7fffeb891208, event=0x7fffdc327108, handlers=0x7fffd0e9f510)
    at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2945
- 18 0x000055555822e359 in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3381
- 19 0x0000555558221317 in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417
#20 0x0000555557b7aee9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500

I also tried this on with and other random .mp3 file and the same thing happens.

I'm getting some asserts: ``` BLI_assert failed: /home/zed/prog/blender/source/blender/blenkernel/intern/sound.c:89, sound_verify_evaluated_id(), at 'id->tag & (LIB_TAG_COPIED_ON_WRITE | LIB_TAG_COPIED_ON_WRITE_EVAL_RESULT | LIB_TAG_NO_MAIN)' blender: /home/zed/prog/blender/extern/audaspace/bindings/C/AUD_Sound.cpp:257: AUD_Sound* AUD_Sound_cache(AUD_Sound*): Assertion `sound' failed. ``` If I ignore that I get this crash: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x000055555cbaa136 in std::__shared_ptr<aud::ISound, (__gnu_cxx::_Lock_policy)2>::__shared_ptr (this=0x7fffffffd5c0) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1165 1165 __shared_ptr(const __shared_ptr&) noexcept = default; (gdb) bt #0 0x000055555cbaa136 in std::__shared_ptr<aud::ISound, (__gnu_cxx::_Lock_policy)2>::__shared_ptr (this=0x7fffffffd5c0) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr_base.h:1165 #1 0x000055555cbaa181 in std::shared_ptr<aud::ISound>::shared_ptr (this=0x7fffffffd5c0) at /usr/lib/gcc/x86_64-pc-linux-gnu/8.3.0/include/g++-v8/bits/shared_ptr.h:129 - 2 0x000055555cbfa231 in AUD_Sound_cache (sound=0x0) at /home/zed/prog/blender/extern/audaspace/bindings/C/AUD_Sound.cpp:261 - 3 0x0000555557db5015 in BKE_sound_cache (sound=0x7fffd25f4208) at /home/zed/prog/blender/source/blender/blenkernel/intern/sound.c:397 - 4 0x00005555581b8aed in rna_Sound_caching_set (ptr=0x7fffd276df60, value=true) at /home/zed/prog/blender/source/blender/makesrna/intern/rna_sound.c:53 - 5 0x00005555581b8d42 in Sound_use_memory_cache_set (ptr=0x7fffd276df60, value=true) at /home/zed/prog/blender/build/source/blender/makesrna/intern/rna_sound_gen.c:125 #6 0x000055555801f41a in RNA_property_boolean_set (ptr=0x7fffd276df60, prop=0x55555e1a4b80 <rna_Sound_use_memory_cache>, value=true) at /home/zed/prog/blender/source/blender/makesrna/intern/rna_access.c:2507 - 7 0x00005555588321d9 in ui_but_value_set (but=0x7fffd276dc08, value=1) at /home/zed/prog/blender/source/blender/editors/interface/interface.c:2179 - 8 0x000055555884a03f in ui_apply_but_TOG (C=0x7fffeb891208, but=0x7fffd276dc08, data=0x7fffe6796908) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:910 #9 0x000055555884cf84 in ui_apply_but (C=0x7fffeb891208, block=0x7fffd22a5d08, but=0x7fffd276dc08, data=0x7fffe6796908, interactive=true) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:2004 #10 0x0000555558851a75 in ui_do_but_ANY_drag_toggle (C=0x7fffeb891208, but=0x7fffd276dc08, data=0x7fffe6796908, event=0x7fffdc327108, r_retval=0x7fffffffd848) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:3909 #11 0x000055555885284f in ui_do_but_TOG (C=0x7fffeb891208, but=0x7fffd276dc08, data=0x7fffe6796908, event=0x7fffdc327108) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:4208 #12 0x000055555885aa9c in ui_do_button (C=0x7fffeb891208, block=0x7fffd22a5d08, but=0x7fffd276dc08, event=0x7fffdc327108) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:7000 #13 0x000055555885d58f in ui_handle_button_event (C=0x7fffeb891208, event=0x7fffdc327108, but=0x7fffd276dc08) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:8163 #14 0x0000555558861d2a in ui_region_handler (C=0x7fffeb891208, event=0x7fffdc327108, UNUSED_userdata=0x0) at /home/zed/prog/blender/source/blender/editors/interface/interface_handlers.c:10036 #15 0x0000555558226d9a in wm_handler_ui_call (C=0x7fffeb891208, handler=0x7fffd0d6ac28, event=0x7fffdc327108, always_pass=0) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:623 #16 0x000055555822c0a7 in wm_handlers_do_intern (C=0x7fffeb891208, event=0x7fffdc327108, handlers=0x7fffd0e9f510) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2699 #17 0x000055555822ce7c in wm_handlers_do (C=0x7fffeb891208, event=0x7fffdc327108, handlers=0x7fffd0e9f510) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:2945 - 18 0x000055555822e359 in wm_event_do_handlers (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm_event_system.c:3381 - 19 0x0000555558221317 in WM_main (C=0x7fffeb891208) at /home/zed/prog/blender/source/blender/windowmanager/intern/wm.c:417 #20 0x0000555557b7aee9 in main (argc=1, argv=0x7fffffffdff8) at /home/zed/prog/blender/source/creator/creator.c:500 ``` I also tried this on with and other random .mp3 file and the same thing happens.
Richard Antalik removed their assignment 2019-07-07 13:48:37 +02:00
Sergey Sharybin was assigned by Richard Antalik 2019-07-07 13:48:37 +02:00

Added subscriber: @iss

Added subscriber: @iss

Looked into this, but still have no clue.
When is next depsgraph training?

Looked into this, but still have no clue. When is next depsgraph training?

This issue was referenced by 9cb1810551

This issue was referenced by 9cb1810551a257043f1f6db7e320b690ff4391f4

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66431
No description provided.